--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -118,46 +118,44 @@ A physicist, an engineer, and a technician walk into a classroom...
 \begin{frame}
 \frametitle{The Physicist: Megan Ivory}
 \begin{columns}
-\begin{column}{7cm}
+\begin{column}{8cm}
 \begin{itemize}
-\item 
+\item Foster mom to two cats, Joey and Tessa; auntie to two humans, Liana and Azeria
+\item PhD in atomic physics (William and Mary), startup ColdQuanta (now Infleqtion), Univ of Washington, Sandia since 2019 working on atomic clocks, quantum computers, and quantum programs like QuLL!
+\item Outside hobbies: trail running, hiking, gardening, backpacking, trad climbing, canyoneering, and skiing
+\item Inside hobbies: cooperative board games, reading trashy fantasy series, acting/writing
 \end{itemize}
-\vspace{1cm} 
 \end{column}
-\begin{column}{4cm}
+\begin{column}{3.5cm}
 \begin{center}
-
+\includegraphics[width=3.5cm]{fig/meganfam.jpg}
 \end{center}
 \end{column}
 \end{columns}
+
+\vspace{0.5cm}
+
+I’ve never taken a quantum information science class…
 \end{frame}
 
 \begin{frame}
 \frametitle{The Technician: Shawn Morales}
 \begin{columns}
-\begin{column}{7cm}
+\begin{column}{6cm}
 \begin{itemize}
-\item 
-
-\vspace{0.25cm}
-
+\item Blessed husband of Joy and proud father of Katelyn (29) and Kimber (28)
+\item Intel Manufacturing Technician of 32 years
+\item Worked on 26 different tools within Intel
+\item Adore my time with family, mountain biking, and the great outdoors
 \end{itemize}
-\vspace{1cm} 
 \end{column}
-\begin{column}{4cm}
+\begin{column}{5cm}
 \begin{center}
-
+\includegraphics[width=4.5cm]{fig/shawn.jpg}
 \end{center}
 \end{column}
 \end{columns}
 \end{frame}
-
-
-
-
-
-
-
 
 \begin{frame}\frametitle{Student Introductions}
 \begin{itemize}
@@ -167,6 +165,26 @@ A physicist, an engineer, and a technician walk into a classroom...
 \item What do you hope to get out of the bootcamp
 \end{itemize}
 \end{frame}
+
+\begin{frame}\frametitle{Drinks, Lunch and Snacks}
+\begin{itemize}
+\item There is a kitchenette down the hall with coffee/tea, snacks, frig, microwave
+\begin{itemize}
+\item The rest of the room is the TSL Lab - please don't disturb it
+\item Please clean up the area every time you use it.
+\item Don't leave leftovers overnight in the frig
+\end{itemize}
+\item Drink are allowed in the QuLL, but not near the optical tables or vacuum systems
+\item You can eat lunch in the QuLL, 
+\begin{itemize}
+\item There will be a mid-day 1 hour lunch break
+\item Again, no food/drink near optical tables or vacuum systems
+\item Tables wiped down at the end of lunch
+\end{itemize}
+\item No food trash in QuLL garbage can (use the kitchenette trash)
+\end{itemize}
+\end{frame}
+
 
 \begin{frame}\frametitle{Class Rules}
 \begin{itemize}
@@ -190,6 +208,57 @@ A physicist, an engineer, and a technician walk into a classroom...
 \end{itemize}
 \end{frame}
 
+\begin{frame}\frametitle{Credit for Prior Learning (CPL)}
+If students enroll in an academic program at CNM, they are eligible for up to 24 credits though CPL:
+
+\begin{itemize}
+\item Current CPL (will be finalized before December)
+\begin{itemize}
+\item MATH 1220 College Algebra
+\item BCIS 1110 Fundamentals of Information Literacy and Systems
+\item BUSA Business Professionalism
+\end{itemize}
+\item CPL that can be claimed starting in Fall 2026
+\begin{itemize}
+\item ENGT 10xx Optics
+\item ENGT 20xx Laser and Photonics
+\item CSCI 10xx Survey of Quantum Computing
+\item CSCI 20xx Quantum Hardware
+\end{itemize}
+
+
+
+
+\end{itemize}
+
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Foundation of lean Certificate}
+\begin{center}
+\includegraphics[width=8cm]{fig/nmmep.png} 
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{IPC Solder Certification}
+\begin{columns}
+\begin{column}{5.5cm}
+	\begin{center}	
+	\includegraphics[width=5cm]{fig/ipc1.png} 
+	\end{center}
+\end{column}
+\begin{column}{5.5cm}
+	\begin{center}	
+	\includegraphics[width=5cm]{fig/ipc2.jpg} 
+	\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+
 \begin{frame}\frametitle{Important Attribute in an Employee}
 \begin{itemize}
 \item Tolerance of Ambiguity
@@ -198,6 +267,11 @@ A physicist, an engineer, and a technician walk into a classroom...
 \item Curiosity
 \item Structured Problem Solving
 \end{itemize}
+
+
+Note: employers regularly ask the instructional team for references, it is these attributes that we will be the basis of our recommendation. 
+
+
 \end{frame}
 
 \section{Overview: QIS in NM}
@@ -299,7 +373,91 @@ A physicist, an engineer, and a technician walk into a classroom...
 \end{itemize}
 \end{frame}
 
-\section{Atomic Quantum Systems}
+
+\begin{frame}\frametitle{Brightspace}
+\begin{center}
+\includegraphics[width=10cm]{fig/brightspace1.jpg}
+
+\vspace{1cm}
+
+\includegraphics[width=10cm]{fig/brightspace2.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Solidworks - Windows Users}
+
+
+To install Solidworks (Windows only), go to \url{http://www.SolidWorks.com/SEK}
+\begin{itemize}
+\item Enter your contact information.
+\item Check the radio button “Yes” under "I already have a Serial Number that starts with 9020".
+\item Select the version: 2024 SP5.0 and click Request Download.
+\item On the next page, Accept the agreement and continue.
+\item On the final page, click the Download button to download the SolidWorks Installation Manager.
+\item Unzip the files to launch the Installation.
+\item Select the option for Individual/On this machine.
+\item Install using the following serial number provided by your instructor.
+\end{itemize}
+
+
+
+\end{frame}
+
+\begin{comment}
+
+macOS and Linux users will use onShape: \url{https://www.onshape.com/en/education/}
+
+2021-2022: 9020005002143476M2TGM8G4
+2022-2023: 9020005328617363VNZVR37D
+
+
+1.  Uninstall any/all previous version of SOLIDWORKS
+2.  Go to www.solidworks.com/SEK
+3.  Use SEK-ID = XSEK12 and enter all relevant information into the form
+4.  Choose 2023 for the most recent version of SOLIDWORKS
+5.  You will then be asked to enter the school’s unique SEK Serial Number:
+Your Student Download Serial Number is:
+
+9020005723476091HT7RDP86 - (Qty: 60)
+9020005723816337C39Z2D27 - (Qty: 20)
+
+* Follow all remaining instructions and accept all defaults
+* Your VAR Name is GoEngineer
+
+\end{comment}
+
+\begin{frame}\frametitle{Other Software}
+\begin{enumerate}
+\item Bambu Studio
+	\begin{itemize}
+	\item \url{https://bambulab.com/en/download/studio}
+	\end{itemize}
+\item Microsoft Excel
+	\begin{itemize}
+	\item \url{https://office365.com}
+	\item Log in with your CNM credentials
+	\item Download excel (and any other office programs) 
+	\end{itemize}
+\item Adobe Illustrator 
+	\begin{itemize}
+	\item \url{https://adobe.com/creativecloud}
+	\item Log in with your CNM credentials
+	\item Select Work/School account 
+	\end{itemize}
+\item Octave
+	\begin{itemize}
+	\item \url{https://octave.org/download/}
+	\end{itemize}
+\item Bookmark: \url{https://www.desmos.com/}
+\end{enumerate}
+\end{frame}
+
+\begin{frame}\frametitle{Inaugural Cohort}
+\begin{center}
+\includegraphics[width=10cm]{fig/underconstruction.jpg}
+\end{center}
+\end{frame}
 
 
 \section{Safety}
@@ -356,6 +514,11 @@ A physicist, an engineer, and a technician walk into a classroom...
 \includegraphics[width=6cm]{fig/highV.jpg}
 \end{center}
 \end{frame}
+
+\section{Atomic Quantum Systems}
+
+\section{Vacuum Systems}
+
 
 \section{Geometric Optics}
 
@@ -469,9 +632,7 @@ $c=2.99792458×10^8 (\frac{m}{s})$.
 
 \end{frame}
 
-\section{Trigonometry}
-
-
+\section{Math Interlude: Trigonometry}
 
 \begin{frame}\frametitle{Algebraic Functions}
 \begin{columns}
@@ -762,11 +923,7 @@ The fiber optic cable takes advantage of the core having a high index of refract
 \vspace{3cm}
 
 More to come on fibers as we progress through the Quantum Journey
-
-
 \end{frame}
-
-
 
 \begin{frame}\frametitle{Fiber: Acceptance Angle}
 For multi-mode fibers, the numerical appeture (NA) provides  a good estimate of the maximum acceptance angle. 
@@ -798,6 +955,33 @@ For multi-mode fibers, the numerical appeture (NA) provides  a good estimate of 
 \end{column}
 \end{columns}
 \end{frame}
+
+
+\begin{frame}\frametitle{Assignment: Fiber Coupling}
+\begin{columns}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/coupling.jpg}
+
+\vspace{1cm}
+
+\includegraphics[width=3cm]{fig/pm100d.jpg}
+
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item Use the two mirror walk to align a HeNe laser beam to a fiber.
+\item Improve the quality of the coupling by maximizin the power meter reading.
+\item How can you improve the coupling? 
+\end{itemize}
+
+
+\end{column}
+\end{columns}
+
+\end{frame}
+
 
 
 \begin{frame}\frametitle{Dispersion}
@@ -1256,6 +1440,15 @@ The laser beam has a Gaussian profile.
 \end{column}
 \end{columns}
 \end{frame}
+
+\begin{frame}\frametitle{Python Excursion}
+
+\begin{center}
+\includegraphics[width=6cm]{fig/python1.png}
+\end{center}
+
+\end{frame}
+
 
 \section{Mirrors}
 
