--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -260,6 +260,8 @@ If students enroll in an academic program at CNM, they are eligible for up to 24
 
 
 \begin{frame}\frametitle{Important Attribute in an Employee}
+\begin{columns}
+\begin{column}{5cm}
 \begin{itemize}
 \item Tolerance of Ambiguity
 \item Attention to Detail
@@ -267,11 +269,19 @@ If students enroll in an academic program at CNM, they are eligible for up to 24
 \item Curiosity
 \item Structured Problem Solving
 \end{itemize}
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=3.5cm]{fig/scimeth.jpg}
+\end{center}
 
+\end{column}
+\end{columns}
+
+
+\vspace{1cm}
 
 Note: employers regularly ask the instructional team for references, it is these attributes that we will be the basis of our recommendation. 
-
-
 \end{frame}
 
 \section{Overview: QIS in NM}
@@ -468,27 +478,38 @@ Your Student Download Serial Number is:
 \end{center}
 \end{frame}
 
+\begin{frame}\frametitle{Laser Safety - Laser Classes}
+\begin{center}
+\includegraphics[width=8cm]{fig/lasersafe.jpg}
+\end{center}
+\end{frame}
 
-\begin{frame}\frametitle{Laser Safety}
-
+\begin{frame}\frametitle{Laser Safety - Class 2}
 \begin{center}
 \includegraphics[width=10cm]{fig/lsafe.png}
 \end{center}
-
 \begin{itemize}
 \item Class 2 lasers, which are limited to 1 mW of visible continuous-wave radiation, are safe because the blink reflex will limit the exposure in the eye to 0.25 seconds. This category only applies to visible radiation (400 - 700 nm).
 \end{itemize}
-
 \end{frame}
 
-\begin{frame}\frametitle{Laser Safety - Continued}
+\begin{frame}\frametitle{Laser Safety - Class 3R}
+\begin{center}
+\includegraphics[width=10cm]{fig/lsafe.png}
+\end{center}
 \begin{itemize}
-\item Class 3R lasers produce visible and invisible light that is hazardous under direct and specular-reflection viewing conditions. Eye injuries may occur if you directly view the beam, especially when using optical instruments. Lasers in this class are considered safe as long as they are handled with restricted beam viewing. The MPE can be exceeded with this class of laser; however, this presents a low risk level to injury. Visible, continuous-wave lasers in this class are limited to 5 mW of output power.
-\item Class 3B lasers are hazardous to the eye if exposed directly. Diffuse reflections are usually not harmful, but may be when using higher-power Class 3B lasers. Safe handling of devices in this class includes wearing protective eyewear where direct viewing of the laser beam may occur. Lasers of this class must be equipped with a key switch and a safety interlock; moreover, laser safety signs should be used, such that the laser cannot be used without the safety light turning on. Laser products with power output near the upper range of Class 3B may also cause skin burns.
+\item Class 3R lasers produce visible and invisible light that is hazardous under direct and specular-reflection viewing conditions. Eye injuries may occur if you directly view the beam, especially when using optical instruments. Lasers in this class are considered safe as long as they are handled with restricted beam viewing. Visible, continuous-wave lasers in this class are limited to 5 mW of output power.
 \end{itemize}
-
 \end{frame}
 
+\begin{frame}\frametitle{Laser Safety - Class 3R}
+\begin{center}
+\includegraphics[width=10cm]{fig/lsafe.png}
+\end{center}
+\begin{itemize}
+\item Class 3B lasers are hazardous to the eye if exposed directly. Diffuse reflections are usually not harmful. Safe handling of devices in this class includes wearing protective eyewear where direct viewing of the laser beam may occur. Lasers of this class must be equipped with a key switch, laser safety signs should be used. Laser products with power output near the upper range of Class 3B may also cause skin burns.
+\end{itemize}
+\end{frame}
 
 \begin{frame}\frametitle{Lock Out Tag Out}
 \begin{center}
@@ -1568,88 +1589,51 @@ For a mirror that is large compared to the radius of curvature, the reflected ra
 
 \end{frame}
 
+\section{Wave Optics}
 
-
-\section{Interlude: Light - a particle or a wave?}
-
-\begin{frame}\frametitle{Corpuscular Theory of Light}
-
-In 1675, Sir Isaac Newton hypothesized that light was made up corpuscules (small particles) with the size/mass of the corresponding to different colors. 
-
+\begin{frame}\frametitle{Corpuscular or Waves}
 \begin{columns}
-\begin{column}{3.5cm}
+\begin{column}{5cm}
+In 1675, Sir Isaac Newton hypothesized that light was made up corpuscules (small particles) with the size/mass of the corresponding to different colors. 
 \begin{center}
-\includegraphics[width=3cm]{fig/corpReflect.png}
+\includegraphics[width=2cm]{fig/corpReflect.png}
+\includegraphics[width=2cm]{fig/corpRefract.png}
 \end{center}
-\end{column}
 
-\begin{column}{3.5cm}
-\begin{center}
-\includegraphics[width=3cm]{fig/corpRefract.png}
-\end{center}
-\end{column}
-
-\begin{column}{3.5cm}
 \begin{center}
 \includegraphics[width=3cm]{fig/corpDoubleSlit.png}
 \end{center}
 \end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Huygens Principle}
-\begin{columns}
-\begin{column}{3cm}
+\begin{column}{5cm}
+In 1678, Christian Huygens, in order to explain the diffraction of light, proposed that every point on a wavefront (of light) is a wavelet that spreads.
 \begin{center}
-\includegraphics[width=2cm]{fig/grimaldi.png}
-
-\vspace{0.5cm}
-
-\includegraphics[width=2cm]{fig/huygens.png}
-
+\includegraphics[width=3.5cm]{fig/huygens.png}
 \end{center}
 \end{column}
-
-\begin{column}{8cm}
-\begin{itemize}
-\item Francesco Maria Grimaldi (mid-1600's) made accurate observations of the diffraction of light.
-
-\vspace{0.5cm}
-
-\item In 1678, Christian Huygens, in order to explain the diffraction of light, proposed that every point on a wavefront (of light) is a wavelet that spreads.
-\end{itemize}
-\end{column}
 \end{columns}
-
 \end{frame}
 
+\begin{frame}\frametitle{On the theory of light and color}
 
-\begin{frame}\frametitle{Fresnel and Young}
-\begin{columns}
-\begin{column}{3cm}
 \begin{center}
-\includegraphics[width=3cm]{fig/fresnel.png}
-
-\vspace{0.5cm}
-
 \includegraphics[width=3cm]{fig/youngDoubleSlit.jpg}
-
 \end{center}
-\end{column}
 
-\begin{column}{8cm}
+Thomas Young, who had read Newton’s Opticks at age 17 saw some problems with Newton’s corpuscular theory.
 \begin{itemize}
-\item In 1815, Augistine Jean Fresnel devleoped the laws of reflection and refraction.
+\item At interfaces (air/water) some light is reflected and some is refracted.
+\item Different colors refracted to different degrees
+\end{itemize} 
 
-\vspace{0.5cm}
-
-\item And, in 1817, Thomas Young calculated the wavelength of light
+Observing sound (a compression wave in air):
+\begin{itemize}
+\item When two waves of sound cross, they interfere with each other
+\item Light might exhibit interference phenomena as well
+\item Developed basic idea for the double-slit experiment, which demonstrated the interference of light waves.
 \end{itemize}
-\end{column}
-\end{columns}
-
 \end{frame}
 
+\begin{comment}
 \begin{frame}\frametitle{Maxwell's Equations: Electric $\vec{E}$ and Magnetic $\vec{B}$ Fields}
 In 1864, James Clerk Maxwell predicted electromagnetic waves
 \begin{itemize}
@@ -1669,7 +1653,7 @@ Maxwell noted that the speed of the electromagnetic wave is equal to the speed o
 $\frac{1}{\sqrt{\mu_0 \epsilon_0}}= \frac{1}{\sqrt{4 \pi*10^{-7} \cdot 8.85*10^{-12}}} = 2.99*10^{8} \frac{m}{s} = c$
 \end{frame}
 
-\section{Wave Optics}
+
 
 \begin{frame}\frametitle{Speed of Light in a Medium}
 The speed of a wave is the frequency ($\frac{1}{s}$) times the wavelength ($m$):
@@ -1686,19 +1670,53 @@ v = \frac{c}{n} = \frac{f \lambda}{n} = f \lambda_n
 \end{equation}
 where $\lambda_n$ is the wavelength in the medium.
 \end{frame}
+\end{comment}
 
 \begin{frame}\frametitle{Huygens's Principle: Diffraction}
 \begin{columns}
-\begin{column}{7cm}
+\begin{column}{4.5cm}
 Every point on a wavefront is a source of wavelets that spread out in the forward direction at the same speed as the wave itself. The new wavefront is a line tangent to all of the wavelets.
 \end{column}
-\begin{column}{4cm}
+\begin{column}{3.25cm}
 \begin{center}
-\includegraphics[width=3cm]{fig/huygens.jpg}
+\includegraphics[width=2.5cm]{fig/huygens.jpg}
+\end{center}
+\end{column}
+\begin{column}{3.25cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/huygens.png}
 \end{center}
 \end{column}
 \end{columns}
 \end{frame}
+
+
+\begin{frame}\frametitle{Huygens's Principle: Diffraction}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/waterloo.jpg}
+
+\vspace{.25cm}
+
+\includegraphics[width=4cm]{fig/hair.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Mount a hair and shine laser (of wavelength $\lambda$ through it at a screen
+\item Measure distance to the screen ($d$)
+\item Measure the distance between dark spots ($s$)
+\item Calculate the width of the hair ($w$)
+
+\[ w = \frac{2 d \lambda}{s} \]
+
+\item Try someone else's hair or a different color laser.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
 
 \begin{frame}\frametitle{Huygens's Mirror}
 \begin{columns}
