ready for day one

--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -225,17 +225,41 @@ If students enroll in an academic program at CNM, they are eligible for up to 24
 \item CSCI 10xx Survey of Quantum Computing
 \item CSCI 20xx Quantum Hardware
 \end{itemize}
-
-
-
-
 \end{itemize}
+\end{frame}
 
-
+\begin{frame}\frametitle{Professional Development and Guest Speakers}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{itemize}
+\item Clifton Strength Finder
+\item CNM Workforce and Community Success
+\item LinkedIn / Online Job Search
+\item Resume Workshop
+\item Interview Skills
+\item Effective Influencing
+\item Constructive Confrontation
+\item Presentation/Pitch Pitch
+\end{itemize}
+\end{column}
+\begin{column}{5.5cm}
+\begin{itemize}
+\item City of ABQ
+\item Elevate Quantum
+\item Quantum NM Institute / UNM
+\item Quantinuum
+\item Qunnect
+\item Vescent
+\item 3D Glass Solutions
+\item Infleqtion
+\end{itemize}
+\end{column}
+\end{columns}
 \end{frame}
 
 
-\begin{frame}\frametitle{Foundation of lean Certificate}
+
+\begin{frame}\frametitle{Foundation of Lean Certificate}
 \begin{center}
 \includegraphics[width=8cm]{fig/nmmep.png} 
 \end{center}
@@ -457,9 +481,14 @@ Your Student Download Serial Number is:
 	\end{itemize}
 \item Octave
 	\begin{itemize}
-	\item \url{https://octave.org/download/}
+	\item \url{https://octave.org/download}
 	\end{itemize}
-\item Bookmark: \url{https://www.desmos.com/}
+\item Bookmark the following: 
+	\begin{itemize}
+	\item \url{https://www.desmos.com}
+	\item \url{https://quantum.cloud.ibm.com/composer}
+	\item \url{https://colab.research.google.com}
+	\end{itemize}
 \end{enumerate}
 \end{frame}
 
@@ -468,6 +497,22 @@ Your Student Download Serial Number is:
 \includegraphics[width=10cm]{fig/underconstruction.jpg}
 \end{center}
 \end{frame}
+
+\begin{frame}\frametitle{Pre Knowledge Check}
+\begin{center}
+\includegraphics[width=8cm]{fig/precat.jpg}
+\end{center}
+
+\vspace{0.25cm}
+\begin{itemize}
+\item We are assuming no prior knowledge
+\item Pre and Post check will be used to help instructional team for future cohorts
+\item D) I am not familiar with this concept is an option on every question
+\end{itemize}
+
+
+\end{frame}
+
 
 
 \section{Safety}
@@ -480,7 +525,7 @@ Your Student Download Serial Number is:
 
 \begin{frame}\frametitle{Laser Safety - Laser Classes}
 \begin{center}
-\includegraphics[width=8cm]{fig/lasersafe.jpg}
+\includegraphics[width=10cm]{fig/lasersafe.jpg}
 \end{center}
 \end{frame}
 
@@ -1216,6 +1261,23 @@ The image in which light rays from one point on the object actually cross at the
 
 \end{frame}
 
+\begin{frame}\frametitle{Assignment - Focus CCD Camera}
+\begin{columns}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/thorCCD.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item
+\item 
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 \begin{frame}\frametitle{Image Formation - Virtual Image}
 
 \begin{center}
@@ -1604,10 +1666,10 @@ In 1675, Sir Isaac Newton hypothesized that light was made up corpuscules (small
 \includegraphics[width=3cm]{fig/corpDoubleSlit.png}
 \end{center}
 \end{column}
-\begin{column}{5cm}
-In 1678, Christian Huygens, in order to explain the diffraction of light, proposed that every point on a wavefront (of light) is a wavelet that spreads.
+\begin{column}{6cm}
+In 1678, Christian Huygens, in order to explain the diffraction of light, proposed that every point on a wavefront is a source of wavelets that spread out in the forward direction at the same speed as the wave itself. The new wavefront is a line tangent to all of the wavelets.
 \begin{center}
-\includegraphics[width=3.5cm]{fig/huygens.png}
+\includegraphics[width=5cm]{fig/huygens3.jpg}
 \end{center}
 \end{column}
 \end{columns}
@@ -1653,25 +1715,6 @@ Maxwell noted that the speed of the electromagnetic wave is equal to the speed o
 $\frac{1}{\sqrt{\mu_0 \epsilon_0}}= \frac{1}{\sqrt{4 \pi*10^{-7} \cdot 8.85*10^{-12}}} = 2.99*10^{8} \frac{m}{s} = c$
 \end{frame}
 
-
-
-\begin{frame}\frametitle{Speed of Light in a Medium}
-The speed of a wave is the frequency ($\frac{1}{s}$) times the wavelength ($m$):
-\begin{equation}
-c = f \lambda
-\end{equation}
-where in a vacuum, $c = 2.99 * 10^8 (\frac{m}{s})$. \newline
-
-Light has wave characteristics in a medium other than a vacuum, as well. In this case, the speed and wavelength change, but the frequency stays the same. The speed of light in a medium is governed by its index of refraction ($n$), where $v = \frac{c}{n}$. \newline
-
-Divide both sides of the above equation by $n$ yields:
-\begin{equation}
-v = \frac{c}{n} = \frac{f \lambda}{n} = f \lambda_n
-\end{equation}
-where $\lambda_n$ is the wavelength in the medium.
-\end{frame}
-\end{comment}
-
 \begin{frame}\frametitle{Huygens's Principle: Diffraction}
 \begin{columns}
 \begin{column}{4.5cm}
@@ -1689,9 +1732,9 @@ Every point on a wavefront is a source of wavelets that spread out in the forwar
 \end{column}
 \end{columns}
 \end{frame}
+\end{comment}
 
-
-\begin{frame}\frametitle{Huygens's Principle: Diffraction}
+\begin{frame}\frametitle{Assignment: Width of Human Hair}
 \begin{columns}
 \begin{column}{4cm}
 \begin{center}
@@ -1718,31 +1761,7 @@ Every point on a wavefront is a source of wavelets that spread out in the forwar
 \end{frame}
 
 
-\begin{frame}\frametitle{Huygens's Mirror}
-\begin{columns}
-\begin{column}{6cm}
-A mirror reflects an incoming wave at an angle equal to the incident angle, verifying the law of reflection. As the wavefront strikes the mirror, wavelets are first emitted from the left part of the mirror and then the right. The wavelets closer to the left have had time to travel farther, producing a wavefront traveling in the direction shown.
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/huyMirror.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
 
-\begin{frame}\frametitle{Huygens's Refraction}
-\begin{columns}
-\begin{column}{6cm}
-Each wavelet to the right was emitted when the wavefront crossed the interface between the media. Since the speed of light is slower in the second medium, the waves do not travel as far in a given time, and the new wavefront changes direction as shown. This explains why a ray changes direction to become closer to the perpendicular when light slows down and can be used to derive Snell's Law.
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/huyRefract.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
 
 \begin{frame}\frametitle{Diffraction}
 \begin{columns}
@@ -1809,11 +1828,50 @@ If we pass light through smaller openings, often called slits, we can use Huygen
 
 \begin{frame}\frametitle{Double Slit - Constructive Interference}
 \begin{center}
-\includegraphics[width=8cm]{fig/ds4.jpg}
+\includegraphics[width=5cm]{fig/ds4.jpg}
 \end{center}
+\[ \tan{(\theta_1)} = \frac{y_1}{x} \]
+
+Using small angle assumption\footnote{for small angles ($\theta$) measured in radians, $tan(\theta) = sin(\theta) = \theta$.}:
+\[d y_1 = x \lambda \text{ for } m=1\]
+\[d = \frac{x}{y_1} \lambda \]
 
 \end{frame}
 
+\begin{frame}\frametitle{Single Slit}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[height=7cm]{fig/sl2.jpg}
+\end{center}
+
+
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/sl1.jpg}
+
+\includegraphics[width=3cm]{fig/sl3.jpg}
+\end{center}
+\[D = \frac{2 x \lambda}{y_{dark}}\]
+\end{column}
+\end{columns}
+Double slit is actually the double slit result times the single slit.
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Calculate slit width and distance}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/thorDouble.jpg}
+\end{center}
+
+\vspace{1cm}
+
+\begin{itemize}
+\item Calculate the slit distance and slit width for three different single/double slits. 
+\end{itemize}
+
+\end{frame}
 
 \begin{frame}\frametitle{Diffraction Grating}
 \begin{columns}
@@ -1870,24 +1928,7 @@ for, $m = 1$.
 \end{frame}
 
 
-\begin{frame}\frametitle{Single Slit}
-\begin{columns}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[height=7cm]{fig/sl2.jpg}
-\end{center}
 
-
-\end{column}
-\begin{column}{6cm}
-\begin{center}
-\includegraphics[width=4cm]{fig/sl1.jpg}
-
-\includegraphics[width=4cm]{fig/sl3.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
 
 
 \begin{frame}\frametitle{Limits of Resolution}
@@ -1970,7 +2011,169 @@ The $NA$ is defined as $NA = n \cdot sin{\alpha}$ where $n$ is the index of refr
 
 \end{frame}
 
+\begin{frame}\frametitle{Huygens's Mirror}
+\begin{columns}
+\begin{column}{6cm}
+A mirror reflects an incoming wave at an angle equal to the incident angle, verifying the law of reflection. As the wavefront strikes the mirror, wavelets are first emitted from the left part of the mirror and then the right. The wavelets closer to the left have had time to travel farther, producing a wavefront traveling in the direction shown.
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/huyMirror.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
 
+\begin{frame}\frametitle{Speed of Light in a Medium}
+The speed of a wave is the frequency ($\frac{1}{s}$) times the wavelength ($m$):
+\begin{equation}
+c = f \lambda
+\end{equation}
+where in a vacuum, $c = 2.99 * 10^8 (\frac{m}{s})$. \newline
+
+Light has wave characteristics in a medium other than a vacuum, as well. In this case, the speed and wavelength change, but the frequency stays the same. The speed of light in a medium is governed by its index of refraction ($n$), where $v = \frac{c}{n}$. \newline
+
+Divide both sides of the above equation by $n$ yields:
+\begin{equation}
+v = \frac{c}{n} = \frac{f \lambda}{n} = f \lambda_n
+\end{equation}
+where $\lambda_n$ is the wavelength in the medium.
+\end{frame}
+
+\begin{frame}\frametitle{Huygens's Refraction}
+\begin{columns}
+\begin{column}{6cm}
+Each wavelet to the right was emitted when the wavefront crossed the interface between the media. Since the speed of light is slower in the second medium, the waves do not travel as far in a given time, and the new wavefront changes direction as shown. This explains why a ray changes direction to become closer to the perpendicular when light slows down and can be used to derive Snell's Law.
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/huyRefract.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\section{Interferometry}
+
+\begin{frame}\frametitle{Michelson Interferometer}
+
+Invented by the American physicist Albert Abraham Michelson in 1887.
+
+\begin{columns}
+\begin{column}{7cm}
+\begin{center}
+\includegraphics[width=7cm]{fig/michelson2.jpg}
+\end{center}
+\end{column}
+\begin{column}{3cm}
+\begin{enumerate}
+\item Laser
+\item Beam Splitter
+\item Mirror
+\item Screen
+\end{enumerate}
+\end{column}
+\end{columns}
+
+\vspace{0.25cm}
+
+\begin{itemize}
+\item Laser light is divided by the beamsplitter, the partial beams are reflected by the mirrors and overlap again at the beamsplitter.
+\item The light intensity on the screen is dependent on the path length difference ($\Delta s$) between the two paths $s_1$ and $s_2$. 
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}\frametitle{Interferometer Math}
+\begin{itemize}
+\item The Electric Field ($E_i$) is given by
+\begin{equation}
+\vert E_i \vert = \sqrt{R \cdot T} \cos{(\omega t + \phi_i)}
+\end{equation}
+where $T$ is the transmission capacity of the beamsplitter, $R$ is the relection capacity, and $\phi_i$ is the phase which value is defined by the actual optical path.
+\item Intensity ($I$) on the screen is given by
+\begin{equation}
+I = c \epsilon_0 \vert E_1 + E_2 \vert^2
+\end{equation}
+\item If we assume that the transmission and reflection capacity are 0.5 then the average intensity ($\bar{I}$) is given by
+\begin{equation}
+\bar{I} = \frac{1}{4} c \epsilon_0 E_0^2 (1 + \cos{(\Delta \phi))}
+\end{equation}
+where $\Delta \phi = \frac{2 \pi}{\lambda} \Delta s$ and $\lambda$ is the wavelength
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Interferometer Math - what does it mean}
+Compare the centers:
+
+\begin{center}
+\includegraphics[width=10cm]{fig/fringe2.jpeg}
+\end{center}
+
+Why are there alternating concentric circles?
+\end{frame}
+
+
+\begin{frame}\frametitle{Assignment: Michelson Interferometer}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/mint2.jpg}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+Using the ThorLabs Michelson Interferometer Kit:
+\begin{itemize}
+\item Setup per Chapter 4
+\item Complete Preliminary Test (Chapter 6.1)
+\item Determine Laser Wavelenth (Chapter 6.2)
+\item When told: teardown setup, but keep optics in mounts
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Michelson Interferometer 2}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/michelson3.jpg}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+Using the ThorLabs Michelson Interferometer Kit:
+\begin{itemize}
+\item Setup per Chapter 4
+\item Use as spectrometer (Chapter 6.3)
+\item Explore coherence (Chapter 6.4)
+\item When told: teardown setup, but keep optics in mounts
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Michelson Interferometer 3}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/michelson4.jpg}
+
+\vspace{0.25cm}
+
+\includegraphics[width=4cm]{fig/michelson5.jpg}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+Using the ThorLabs Michelson Interferometer Kit:
+\begin{itemize}
+\item Setup per Chapter 4
+\item Measure index of refraction (Chapter 6.5)
+\item Measure thermal expansion (Chapter 6.6)
+\item When told: teardown setup completely and store
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
 
 \section{Polarization}
 
@@ -2075,63 +2278,6 @@ From \url{https://emanim.szialab.org/}
 \end{center}
 \end{frame}
 
-\section{Interferometry}
-
-\begin{frame}\frametitle{Michelson Interferometer}
-
-Invented by the American physicist Albert Abraham Michelson in 1887.
-
-\begin{columns}
-\begin{column}{7cm}
-\begin{center}
-\includegraphics[width=7cm]{fig/mint.jpg}
-\end{center}
-\end{column}
-\begin{column}{3cm}
-\begin{enumerate}
-\item Laser
-\item Beam Splitter
-\item Mirror
-\item Screen
-\end{enumerate}
-\end{column}
-\end{columns}
-
-\begin{itemize}
-\item Laser light is divided by the beamsplitter, the partial beams are reflected by the mirrors and overlap again at the beamsplitter.
-\item The light intensity on the screen is dependent on the path length difference ($\Delta s$) between the two paths $s_1$ and $s_2$. 
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}\frametitle{Interferometer Math}
-\begin{itemize}
-\item The Electric Field ($E_i$) is given by
-\begin{equation}
-\vert E_i \vert = \sqrt{R \cdot T} \cos{(\omega t + \phi_i)}
-\end{equation}
-where $T$ is the transmission capacity of the beamsplitter, $R$ is the relection capacity, and $\phi_i$ is the phase which value is defined by the actual optical path.
-\item Intensity ($I$) on the screen is given by
-\begin{equation}
-I = c \epsilon_0 \vert E_1 + E_2 \vert^2
-\end{equation}
-\item If we assume that the transmission and reflection capacity are 0.5 then the average intensity ($\bar{I}$) is given by
-\begin{equation}
-\bar{I} = \frac{1}{4} c \epsilon_0 E_0^2 (1 + \cos{(\Delta \phi))}
-\end{equation}
-where $\Delta \phi = \frac{2 \pi}{\lambda} \Delta s$ and $\lambda$ is the wavelength
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Interferometer Math - what does it mean}
-Compare the centers:
-
-\begin{center}
-\includegraphics[width=10cm]{fig/fringe2.jpeg}
-\end{center}
-
-Why are there alternating concentric circles?
-\end{frame}
 
 
 \section{The Atom and Quantum Mechanics}
